tests/compile/scope_userdata_borrow.stderr
error[E0597]: `ibad` does not live long enough
  --> $DIR/scope_userdata_borrow.rs:15:56
   |
11 |     lua.scope(|scope| {
   |                ----- has type `&Scope<'_, '1>`
...
15 |             scope.create_nonstatic_userdata(MyUserData(&ibad)).unwrap();
   |             -------------------------------------------^^^^^--
   |             |                                          |
   |             |                                          borrowed value does not live long enough
   |             argument requires that `ibad` is borrowed for `'1`
16 |         };
   |         - `ibad` dropped here while still borrowed
